Update feedback email address to go to group mailbox

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 <p>Good online responses are <em>fast</em> to load, removing frustration and minimising data costs for users. They are <em>accessible</em>, working on a wide range of devices and for a wide range of users' abilities. They are <em>written clearly</em>, avoiding jargon and not expecting technical understanding.</p>
 					<p>Those are the foundations. Great teams build on them with a clear focus on user needs, and strong feedback loops that let them keep making their information and services better.</p>
 					<p>We've been tracking 80-90 government Coronavirus/Covid19 response websites and analysing how well they're covering the basics. These are the interim results, intended to gather feedback.</p>
-					<p>If you want to understand the methodology, you can <a href="https://github.com/jystewart/covid19-response-screenshots">find the raw data and code on github</a>. If you want to provide feedback (and we'd really appreciate that), please <a href="mailto:james@public.digital">email James Stewart</a>.</p>
+					<p>If you want to understand the methodology, you can <a href="https://github.com/jystewart/covid19-response-screenshots">find the raw data and code on github</a>. If you want to provide feedback (and we'd really appreciate that), please <a href="mailto:covidsites-feedback@public.digital">email James Stewart</a>.</p>
 
 					<div class="entry-content">
 						<table id="site-results">
