--- a/templates/site.html
+++ b/templates/site.html
@@ -75,12 +75,14 @@ h1 {
 
 							<p>Note: A score of 0 usually shows a gap in our data, not a regression in the site's behaviour.</p>
 
-							<h2>We still intend to add:</h2>
+							<h2>Things we're considering adding:</h2>
 							<ul>
-								<li>Who owns this site? Perhaps grouping sites from the same government</li>
+								<li>Who owns this site? Perhaps grouping sites from the same government/geography</li>
 								<li>How much does it cost to load the site based on local data costs?</li>
 								<li>Where this site appears in the league tables</li>
+								<li>Bringing back readability calculations</li>
 							</ul>
+					<p>If you want to understand the methodology, you can <a href="https://github.com/jystewart/covid19-response-screenshots">find the raw data and code on github</a>. If you want to provide feedback (and we'd really appreciate that), please <a href="mailto:covidsites-feedback@public.digital">email James Stewart</a>.</p>
 						</div>
 {% endblock %}
 {% block javascript %}
