Add further clarification that this is about basics, not everything you should consider

--- a/templates/site.html
+++ b/templates/site.html
@@ -52,6 +52,8 @@ h1 {
 								</tbody>
 							</table>
 
+							<p>Good scores (0.9 and above) here mean that you're getting some basics right - your site is fast and covers accessibility basics. That's a great foundation to put the focus where it belongs: on understanding and meeting user needs.</p>
+
 							{% if video_url %}
 							<h2>What it feels like to watch it load</h2>
 							<p>This video shows the experience of loading the site on a (globally) average device and internet connection, compared with our highest performing site.</p>
