--- a/templates/base.html
+++ b/templates/base.html
@@ -27,32 +27,34 @@
 
 			</header><!-- #masthead -->
 
+			<div class="content-area" id="prototype-banner">This is an experimental prototype intended to gather feedback. <a href="https://public.digital/2020/06/17/a-prototype-that-compares-coronavirus-response-sites/">Find out more on our blog</a></div>
+
 
 
 			<main id="content" class="site-content pd-container">
 
 
-			<div id="primary" class="content-area">
+				<div id="primary" class="content-area">
 
 
-				<article class="post-1120 page type-page status-publish has-post-thumbnail hentry">
-          {% block content %}{% endblock %}
-        </article>
+					<article class="post-1120 page type-page status-publish has-post-thumbnail hentry">
+						{% block content %}{% endblock %}
+					</article>
 
 
-      </div><!-- #primary -->
+				</div><!-- #primary -->
 
 
-      </main><!-- #content -->
+			</main><!-- #content -->
 
-      <footer id="colophon" class="site-footer pd-footer bg--coal">
-        <div class="content-area">
+			<footer id="colophon" class="site-footer pd-footer bg--coal">
+				<div class="content-area">
 
 
-          <p class="site-info">© Copyright 2020</p>
+					<p class="site-info">© Copyright 2020</p>
 
-        </div><!-- .content-area -->
-      </footer><!-- #colophon -->
-    </div>
-    {% block javascript %}{% endblock %}
-  </body></html>
+				</div><!-- .content-area -->
+			</footer><!-- #colophon -->
+		</div>
+		{% block javascript %}{% endblock %}
+	</body></html>
