Add more explanation of the scores onto landing page

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,8 @@
 					<p>If you want to understand the methodology, you can <a href="https://github.com/jystewart/covid19-response-screenshots">find the raw data and code on github</a>. If you want to provide feedback (and we'd really appreciate that), please <a href="mailto:covidsites-feedback@public.digital">email James Stewart</a>.</p>
 
 					<div class="entry-content">
+						<p>Good scores (0.9 and above) here mean that you're getting some basics right - your site is fast and covers accessibility basics. That's a great foundation to put the focus where it belongs: on understanding and meeting user needs.</p>
+
 						<table id="site-results">
 							<thead>
 								<th>Government</th>
@@ -18,6 +20,7 @@
 								<th>Average speed</th>
 								<th>Average accessibility</th>
 								<th>Reading age</th>
+								<td>&nbsp;</td>
 							</thead>
 							<tbody>
 							{% for site in top_sites %}
